--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,20 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+    "builds": [
+      {
+        "src": "frontend/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "frontend/build"
+        }
+      },
+      {
+        "src": "backend/index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      { "src": "/api/(.*)", "dest": "backend/index.js" },
+      { "src": "/(.*)", "dest": "frontend/build/$1" }
     ]
   }
+  
